Fix image stretching in hero section.

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,8 +7,14 @@
   justify-content: flex-end;
 }
 
-.hero__img {
+.hero__img_container {
   width: 50%;
+}
+
+.hero__img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .hero__text {
